# ferray

./: .commit-msg-888.txt  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  adversarial-review.md  ferrum-core.md  ferrum-design-docs.md  ferrum-fft.md  ferrum-io.md  ferrum-linalg.md  ferrum-ma.md  ferrum-numpy-interop.md  ferrum-polynomial.md  ferrum-random.md  ferrum-reexport.md  ferrum-stats.md  ferrum-stride-tricks.md  ferrum-strings.md  ferrum-ufunc.md  ferrum-window.md  goal.md  index.md  locks.json  phase-0-coordinator.md  phase-4-beyond-numpy.md  phase-5-verification.md  rust-numpy-design.md
ferray/: Cargo.toml  README.md
ferray-core/: Cargo.toml  README.md
ferray-core/examples/: numpy_sort_oracle_harness.rs
ferray-core/src/: buffer.rs  constants.rs  dynarray.rs  error.rs  layout.rs  lib.rs  nditer.rs  ops.rs  prelude.rs  record.rs  verification_kani.rs  writeback.rs
ferray-core/tests/: conformance_creation.rs  conformance_dtype.rs  conformance_indexing.rs  conformance_internal_surface.rs  conformance_manipulation.rs  conformance_surface_coverage.rs  divergence_argreduce.rs  divergence_argreduce_audit.rs  divergence_casting.rs  divergence_casting_samekind_order.rs  divergence_creation_core.rs  divergence_manipulation_core.rs  divergence_promotion.rs  divergence_reductions.rs  divergence_reductions_axis.rs  divergence_reductions_signed_zero.rs  macro_tests.rs  oracle.rs  property_tests.rs
ferray-linalg/: Cargo.toml  README.md
ferray-linalg/examples/: bench_dispatch_threshold.rs  bench_i8s.rs  bench_matmul.rs  cgemm_bench.rs  i8gemm_bench.rs  neon_gemm_bench.rs  sgemm_bench.rs  zgemm_bench.rs
ferray-linalg/src/: batch.rs  complex.rs  f16_support.rs  faer_bridge.rs  lib.rs  norms.rs  scalar.rs  solve.rs  trsm.rs
ferray-linalg/tests/: conformance_decomp.rs  conformance_internal_surface.rs  conformance_products.rs  conformance_solve.rs  conformance_surface_coverage.rs  divergence_complex_linalg.rs  divergence_decomp_edges.rs  divergence_full_contraction_ndim.rs  divergence_linalg.rs  oracle.rs  oracle_f32.rs  property_tests.rs
ferray-ma/: Cargo.toml  README.md
ferray-ma/src/: algorithms.rs  arithmetic.rs  constructors.rs  extras.rs  filled.rs  interop.rs  io.rs  lib.rs  manipulation.rs  mask_ops.rs  masked_array.rs  put.rs  reductions.rs  sorting.rs  ufunc_support.rs
ferray-ma/tests/: conformance_ma.rs  conformance_surface_coverage.rs  divergence_ma.rs  extras_axis_kwargs.rs  oracle.rs  property_tests.rs
ferray-numpy-interop/: Cargo.toml  README.md
ferray-numpy-interop/src/: arrow_conv.rs  dtype_map.rs  extras.rs  lib.rs  numpy_conv.rs  polars_conv.rs
ferray-numpy-interop/tests/: conformance_interop.rs  conformance_surface_coverage.rs  large_arrays.rs  property_tests.rs
ferray-python/: Cargo.toml  README.md  RELEASING.md  pyproject.toml
ferray-python/src/: aliases.rs  autodiff.rs  char.rs  complex.rs  conv.rs  creation.rs  datetime.rs  emath.rs  fft.rs  indexing.rs  io.rs  lib.rs  linalg.rs  ma.rs  manipulation.rs  polynomial.rs  random.rs  stats.rs  stride_tricks.rs  strings.rs  ufunc.rs  window.rs
ferray-python/tests/: divergence_char.py  divergence_complex.py  divergence_creation.py  divergence_datetime_as_string.py  divergence_fft.py  divergence_indexing.py  divergence_introspection.py  divergence_linalg.py  divergence_ma.py  divergence_manipulation.py  divergence_polynomial.py  divergence_random.py  divergence_stats.py  divergence_stride_tricks.py  divergence_strings.py  divergence_ufunc.py  divergence_window.py  test_autodiff.py  test_char.py  test_creation.py  test_divergence_char_family_audit.py  test_divergence_complex_array_audit.py  test_divergence_complex_converge_audit.py  test_divergence_complex_sweep_audit.py  test_divergence_datetime_audit.py  test_divergence_dtype_gap_sweep.py  test_divergence_ma_batch5_audit.py  test_divergence_ma_complex_arith_audit.py  test_divergence_ma_complex_audit.py  test_divergence_ma_complex_reduce_audit.py  test_divergence_ma_construct_audit.py  test_divergence_ma_convergence_sweep.py  test_divergence_ma_data_buffer_audit.py  test_divergence_ma_dtype_audit.py  test_divergence_ma_final_convergence.py  test_divergence_ma_final_gate.py  test_divergence_ma_final_sweep.py  test_divergence_ma_nomask_audit.py  test_divergence_ma_operators_audit.py  test_divergence_ma_putfix_audit.py  (+122 more)
ferray-random/: Cargo.toml  README.md
ferray-random/examples/: bench_normal.rs
ferray-random/src/: generator.rs  legacy.rs  lib.rs  parallel.rs  permutations.rs  shape.rs
ferray-random/tests/: conformance_random.rs  conformance_surface_coverage.rs  property_tests.rs
ferray-test-oracle/: Cargo.toml  README.md
ferray-test-oracle/src/: lib.rs
ferray-ufunc/: Cargo.toml  README.md
ferray-ufunc/examples/: bench_into.rs  bench_parallel.rs  bench_sin.rs
ferray-ufunc/src/: cr_math.rs  dispatch.rs  errstate.rs  fast_exp.rs  fast_trig.rs  helpers.rs  lib.rs  operator_overloads.rs  parallel.rs  promoted.rs  test_util.rs  ufunc_methods.rs  ufunc_object.rs
ferray-ufunc/tests/: conformance_arithmetic.rs  conformance_bitwise.rs  conformance_comparison.rs  conformance_complex.rs  conformance_datetime.rs  conformance_errstate.rs  conformance_explog.rs  conformance_f16.rs  conformance_floatintrinsic.rs  conformance_internal_surface.rs  conformance_interpolation_convolution.rs  conformance_logical.rs  conformance_predicates.rs  conformance_surface_coverage.rs  conformance_trig.rs  conformance_ufunc_methods.rs  divergence_arithmetic.rs  divergence_arithmetic_audit.rs  divergence_binary_promote.rs  divergence_broadcast_wrap.rs  divergence_complex_datetime_edges.rs  divergence_complex_divide_audit.rs  divergence_gcd_unsigned.rs  divergence_transcendental_edges.rs  divergence_unary_promote.rs  divergence_unary_promote_audit.rs  oracle.rs  property_tests.rs  simd_scalar_identity.rs  sin_cos_fast_ops.rs
ferray/examples/: quickstart.rs
ferray/src/: config.rs  (+2 more)
ferrum-ma/: Cargo.toml  README.md
ferrum-random/: Cargo.toml  README.md
ferrum-strings/: Cargo.toml  README.md
(+3075 files in other folders)
