[workspace]
resolver = "2"
exclude = ["benchmarks/ferray_bench"]
members = [
    "ferray",
    "ferray-core",
    "ferray-core-macros",
    "ferray-ufunc",
    "ferray-stats",
    "ferray-io",
    "ferray-linalg",
    "ferray-fft",
    "ferray-random",
    "ferray-polynomial",
    "ferray-window",
    "ferray-strings",
    "ferray-ma",
    "ferray-stride-tricks",
    "ferray-numpy-interop",
    "ferray-autodiff",
    "ferray-python",
    "ferray-test-oracle",
]

[workspace.package]
version = "0.3.5"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dollspace-gay/ferray"
homepage = "https://github.com/dollspace-gay/ferray"
keywords = ["numpy", "ndarray", "scientific-computing", "simd", "linear-algebra"]
categories = ["science", "mathematics"]

[workspace.dependencies]
# Internal crates
ferray = { path = "ferray", version = "0.3.5" }
ferray-core = { path = "ferray-core", version = "0.3.5" }
ferray-core-macros = { path = "ferray-core-macros", version = "0.3.5" }
ferray-ufunc = { path = "ferray-ufunc", version = "0.3.5" }
ferray-stats = { path = "ferray-stats", version = "0.3.5" }
ferray-io = { path = "ferray-io", version = "0.3.5" }
ferray-linalg = { path = "ferray-linalg", version = "0.3.5" }
ferray-fft = { path = "ferray-fft", version = "0.3.5" }
ferray-random = { path = "ferray-random", version = "0.3.5" }
ferray-polynomial = { path = "ferray-polynomial", version = "0.3.5" }
ferray-window = { path = "ferray-window", version = "0.3.5" }
ferray-strings = { path = "ferray-strings", version = "0.3.5" }
ferray-ma = { path = "ferray-ma", version = "0.3.5" }
ferray-stride-tricks = { path = "ferray-stride-tricks", version = "0.3.5" }
ferray-numpy-interop = { path = "ferray-numpy-interop", version = "0.3.5" }
ferray-autodiff = { path = "ferray-autodiff", version = "0.3.5" }

# External dependencies (pinned versions per design spec)
ndarray = "0.17"
num-complex = "0.4"
num-traits = "0.2"
half = "2.7"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
pulp = { version = "0.22", features = ["x86-v3"] }
rayon = "1.12"
faer = "0.24"
faer-traits = "0.24"
rustfft = "6.4"
realfft = "3.5"
byteorder = "1.5"
flate2 = "1.1"
memmap2 = "0.9"
zip = "8"
regex = "1.12"
pyo3 = "0.28"
numpy = "0.28"
arrow = "58"
polars = { version = "0.53", default-features = false }
rand_core = "0.10"
getrandom = "0.4"
proptest = "1.11"
tempfile = "3"
core-math = "1.0"
