[package]
name = "ferray-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "N-dimensional array type and foundational primitives for ferray"

[dependencies]
ndarray = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
ferray-core-macros = { workspace = true }

[dependencies.half]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.chrono]
version = "0.4"
optional = true
default-features = false
features = ["clock"]

[features]
default = ["std"]
# `std` gates everything that needs the ndarray-backed Array type,
# Vec/format!/thiserror's std variants, and the std-only methods on
# Dimension. Build with `--no-default-features` for no_std environments;
# only DType, Element, FerrayError, dimension types, constants, and
# layout enums are available in that mode.
std = []
f16 = ["dep:half"]
bf16 = ["dep:half"]
serde = ["dep:serde", "ndarray/serde"]
const_shapes = []
# `chrono` enables DateTime64 ↔ chrono::DateTime<Utc> conversions in
# dtype::datetime. Independent of the dtype itself (which is always
# available); only the bridge methods require this flag.
chrono = ["dep:chrono"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dev-dependencies]
proptest = { workspace = true }
serde_json = "1"
ferray-test-oracle = { path = "../ferray-test-oracle" }
