[package]
name = "ferray-ma"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Masked arrays with mask propagation for ferray"

[dependencies]
ferray-core = { workspace = true }
# ferray-ufunc and ferray-stats were listed but never imported (#272);
# the interop module references them only in doc comments.
num-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
ferray-test-oracle = { path = "../ferray-test-oracle" }
num-traits = { workspace = true }
