[package]
name = "ferray-numpy-interop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Python/NumPy interop via PyO3 and Arrow/Polars for ferray"

[dependencies]
ferray-core = { workspace = true }

[dependencies.pyo3]
workspace = true
optional = true

[dependencies.numpy]
workspace = true
optional = true

[dependencies.arrow]
workspace = true
optional = true

[dependencies.half]
workspace = true
optional = true

[dependencies.num-complex]
workspace = true
optional = true

[dependencies.polars]
version = "0.46"
optional = true
default-features = false
features = ["dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16"]

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]
arrow = ["dep:arrow"]
polars = ["dep:polars"]
# Forward ferray-core's `f16`/`bf16` knobs and pull in the `half` crate
# so the dtype maps and (where supported) the Arrow/numpy bridges can
# round-trip 16-bit floats.
f16 = ["dep:half", "ferray-core/f16"]
bf16 = ["dep:half", "ferray-core/bf16"]
# Enable Complex<f32>/Complex<f64> mapping in the dtype layer. Arrow has
# no native complex type — see complex_to_arrow_struct in arrow_conv for
# the workaround.
complex = ["dep:num-complex"]

[dev-dependencies]
proptest = { workspace = true }
