[package]
name = "ferray-random"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Random number generation and distributions for ferray"

[dependencies]
ferray-core = { workspace = true }
ferray-linalg = { workspace = true }
rayon = { workspace = true }
# rand_core was listed but never imported (#260); removed.
getrandom = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
