[package]
name = "ferray-test-oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Oracle test utilities for validating ferray against NumPy fixtures"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
ferray-core = { path = "../ferray-core" }
num-complex = "0.4"
# surface-inventory binary deps (leaf-crate level only; NOT in workspace [workspace.dependencies])
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = "1"
quote = "1"
walkdir = "2"
toml = "0.8"
