[package]
name = "ferray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
description = "A NumPy-equivalent library for Rust — N-dimensional arrays with SIMD acceleration"

[dependencies]
ferray-core = { workspace = true }
ferray-ufunc = { workspace = true }
ferray-stats = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true }

[dependencies.ferray-io]
workspace = true
optional = true

[dependencies.ferray-linalg]
workspace = true
optional = true

[dependencies.ferray-fft]
workspace = true
optional = true

[dependencies.ferray-random]
workspace = true
optional = true

[dependencies.ferray-polynomial]
workspace = true
optional = true

[dependencies.ferray-window]
workspace = true
optional = true

[dependencies.ferray-strings]
workspace = true
optional = true

[dependencies.ferray-ma]
workspace = true
optional = true

[dependencies.ferray-stride-tricks]
workspace = true
optional = true

[dependencies.ferray-numpy-interop]
workspace = true
optional = true

[dependencies.ferray-autodiff]
workspace = true
optional = true

[features]
# Default feature set: the common subset most users want out of the
# box. The historical `rayon`, `simd`, `complex` flags were no-ops
# (rayon/ndarray/num-complex are unconditional deps), so they were
# removed — see issue #216.
default = ["strings", "ma", "io", "window"]

# `full` pulls in every sub-crate plus f16 and serde, matching the
# "give me everything" expectation (#334).
full = [
    "default",
    "linalg",
    "fft",
    "random",
    "polynomial",
    "stride-tricks",
    "autodiff",
    "f16",
    "serde",
]

f16 = ["ferray-core/f16", "ferray-ufunc/f16", "ferray-io?/f16"]
bf16 = ["ferray-core/bf16", "ferray-io?/bf16"]
strings = ["dep:ferray-strings"]
ma = ["dep:ferray-ma"]
io = ["dep:ferray-io"]
linalg = ["dep:ferray-linalg"]
fft = ["dep:ferray-fft"]
random = ["dep:ferray-random"]
polynomial = ["dep:ferray-polynomial", "linalg"]
window = ["dep:ferray-window"]
stride-tricks = ["dep:ferray-stride-tricks"]
autodiff = ["dep:ferray-autodiff"]
numpy = ["dep:ferray-numpy-interop"]
serde = ["ferray-core/serde"]
# Forward ferray-core's compile-time const_shapes knob so users of the
# umbrella can opt in without dropping down to ferray-core (#222).
const_shapes = ["ferray-core/const_shapes"]
# no_std is not supported by the umbrella crate because ferray-ufunc and
# ferray-stats require std. Use ferray-core directly with its no_std feature
# for no_std environments.

[dev-dependencies]
proptest = { workspace = true }
