[package]
name = "ferrum-ma"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Masked arrays with mask propagation for ferrum"

[dependencies]
ferrum-core = { workspace = true }
ferrum-ufunc = { workspace = true }
ferrum-stats = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
