[package]
name = "ferrum-strings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "String operations on character arrays for ferrum"

[dependencies]
ferrum-core = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
